--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="jumbotron jumbotron-fluid animeted fadeIn">
+  <div class="container">
+    <h1 class="display-4">App Comic-con</h1>
+    <p class="lead">Esta es una Aplicacion de comics!!</p>
+  </div>
+</div>
